Fix for Pk-1662

--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
@@ -29,7 +29,7 @@
     </Row>
 </Div>
 <Form>
-    <Validations @ref="@ValidationsRef" Model="@CreateUpdateUsage" ValidateOnLoad="false">
+    <Validations @ref="@ValidationsRef" Model="@CreateUpdateUsage" ValidateOnLoad="false"  Mode="ValidationMode.Manual">
         <Card>
             <CardBody>
                 <Row VerticalGutter="10">
