Commit For Pk-1266

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletDetails.razor
@@ -43,8 +43,8 @@
                 <TabPanel Name="AwaitingAudit">
                     <AwaitingAudit />
                 </TabPanel>
-                <TabPanel Name="WalletDetailsRecord">
-                    <WalletDetailsRecord />
+                <TabPanel Name="WalletDetailsRecord" >
+                    <WalletDetailsRecord WalletId="@Wallet.Id" />
                 </TabPanel>
             </Content>
         </Tabs>
