Fix For Pk-1266

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletDetails.razor
@@ -44,7 +44,10 @@
                     <AwaitingAudit />
                 </TabPanel>
                 <TabPanel Name="WalletDetailsRecord" >
-                    <WalletDetailsRecord WalletId="@Wallet.Id" />
+                      @if (SelectedTab == "WalletDetailsRecord")
+        {
+            <WalletDetailsRecord WalletId="@Wallet.Id"  />
+        }
                 </TabPanel>
             </Content>
         </Tabs>
