--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -347,6 +347,10 @@
         color: #F15A34;
     }
 
+.pk-btn.icon i {
+    margin-right: 0px;
+}
+
 .rounded-cards .card {
     border-radius: 20px;
 }
